@@ -293,7 +293,7 @@ public:
   virtual double getAvailableSpeed();
   virtual double getPowerPeakAt(int pstate_index)=0;
   virtual int getNbPstates()=0;
-  virtual void setPowerPeakAt(int pstate_index)=0;
+  virtual void setPstate(int pstate_index)=0;
   void setState(e_surf_resource_state_t state);
 };
 
