@@ -177,16 +177,16 @@ static inline void simcall_host_get_nb_pstates__set__result(smx_simcall_t simcal
     simcall->result.i = result;
 }
 
-static inline smx_host_t simcall_host_set_power_peak_at__get__host(smx_simcall_t simcall) {
+static inline smx_host_t simcall_host_set_pstate__get__host(smx_simcall_t simcall) {
   return (smx_host_t) simcall->args[0].dp;
 }
-static inline void simcall_host_set_power_peak_at__set__host(smx_simcall_t simcall, void* arg) {
+static inline void simcall_host_set_pstate__set__host(smx_simcall_t simcall, void* arg) {
     simcall->args[0].dp = arg;
 }
-static inline int simcall_host_set_power_peak_at__get__pstate_index(smx_simcall_t simcall) {
+static inline int simcall_host_set_pstate__get__pstate_index(smx_simcall_t simcall) {
   return  simcall->args[1].i;
 }
-static inline void simcall_host_set_power_peak_at__set__pstate_index(smx_simcall_t simcall, int arg) {
+static inline void simcall_host_set_pstate__set__pstate_index(smx_simcall_t simcall, int arg) {
     simcall->args[1].i = arg;
 }
 
