@@ -31,7 +31,7 @@ typedef enum {
   SIMCALL_HOST_GET_CURRENT_POWER_PEAK,
   SIMCALL_HOST_GET_POWER_PEAK_AT,
   SIMCALL_HOST_GET_NB_PSTATES,
-  SIMCALL_HOST_SET_POWER_PEAK_AT,
+  SIMCALL_HOST_SET_PSTATE,
   SIMCALL_HOST_GET_CONSUMED_ENERGY,
   SIMCALL_HOST_EXECUTE,
   SIMCALL_HOST_PARALLEL_EXECUTE,
