@@ -139,7 +139,7 @@ public:
   double getCurrentPowerPeak() {THROW_UNIMPLEMENTED;};
   double getPowerPeakAt(int /*pstate_index*/) {THROW_UNIMPLEMENTED;};
   int getNbPstates() {THROW_UNIMPLEMENTED;};
-  void setPowerPeakAt(int /*pstate_index*/) {THROW_UNIMPLEMENTED;};
+  void setPstate(int /*pstate_index*/) {THROW_UNIMPLEMENTED;};
   void modified(bool modified);
 
   CpuTiTgmrPtr p_availTrace;       /*< Structure with data needed to integrate trace file */
